@@ -6,13 +6,11 @@ TESTS = $(check_PROGRAMS)
 
 CPPFLAGS = -I$(top_srcdir)/src -Wall
 
-LDADD  = -L$(top_builddir)/src/.libs -L$(top_builddir)/src/Codecs/.libs -L$(top_builddir)/src/Filters/.libs \
-         -L$(top_builddir)/src/Message/.libs -L$(top_builddir)/src/Net/.libs -L$(top_builddir)/src/Objects/.libs
+LDADD  = -L$(top_builddir)/src/ -L$(top_builddir)/src/Codecs/ -L$(top_builddir)/src/Filters/ \
+         -L$(top_builddir)/src/Message/ -L$(top_builddir)/src/Net/ -L$(top_builddir)/src/Objects/
 
 LIBS = -lAtlasObjects -lAtlasNet -lAtlas -lAtlasCodecs -lAtlasFilters \
        -lAtlasMessage -lAtlas -lbz2 -lz
-
-LDFLAGS = -all-static
 
 Message_Move_SOURCES = Message_Move.cpp
 
