@@ -5,7 +5,7 @@ double calc_time;
 #define TIME_ON  calc_time0=clock();
 #define TIME_OFF(msg) calc_time1=clock();                    \
   calc_time=(double)(calc_time1-calc_time0)/CLOCKS_PER_SEC;  \
-  cout<<msg<<": iterations="<<i                               \
+  std::cout<<msg<<": iterations="<<i                               \
       <<" CPU Time="<<calc_time                              \
-      <<" iter/s="<<i/calc_time<<endl;
+      <<" iter/s="<<i/calc_time<<std::endl;
 
